core/cu29_derive/tests/compile_fail/cu_msg/non_existent_message.stderr
error[E0425]: cannot find type `MyMsg` in this scope
 --> tests/compile_fail/cu_msg/non_existent_message.rs:3:1
  |
3 | gen_cumsgs!("config/non_existent_message.ron");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the macro `gen_cumsgs` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `logviz`
 --> tests/compile_fail/cu_msg/non_existent_message.rs:3:1
  |
3 | gen_cumsgs!("config/non_existent_message.ron");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: expected values for `feature` are: `default`, `macro_debug`, `rtsan`, and `std`
  = note: using a cfg inside a macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `gen_cumsgs` crate for guidance on how handle this unexpected cfg
  = help: the macro `gen_cumsgs` may come from an old version of the `cu29_derive` crate, try updating your dependency with `cargo update -p cu29_derive`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default
  = note: this warning originates in the macro `gen_cumsgs` (in Nightly builds, run with -Z macro-backtrace for more info)
